api-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - name: api
        image: hashicorp/http-echo
        args:
        - "-text=API INOOVA ONLINE 🚀"
        ports:
        - containerPort: 5678
