api-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-app
spec:
  selector:
    app: api-app
  ports:
    - port: 80
      targetPort: 5678
